# austrai-privacyproxy

./: .env.example  .gitignore  docker-compose.yml  privacyproxy_konzept_v2.docx  ~$ivacyproxy_konzept_v2.docx
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __main__.py  cli.py  config.py  custom_terms.py  main.py  models.py
backend/app/data/: examples.py
backend/app/routers/: analyze.py  anonymize.py  health.py  process.py  rehydrate.py  sensitivity.py  summarize.py  upload.py
backend/app/services/: anonymizer.py  austrian_recognizers.py  context_learner.py  detector.py  exif_stripper.py  extractor.py  llm_client.py  local_llm.py  rate_limiter.py  rehydrator.py  sensitivity_analyzer.py  session_store.py
backend/tests/: test_anonymizer.py  test_detector.py  test_extractor.py  test_rehydrator.py
claude logs/: austrai-log1-200326.txt
deploy/: deploy.sh  nginx-austrai.conf
desktop/: austrai_app.py  ui.html
frontend/: astro.config.mjs  package-lock.json  package.json
frontend/src/components/: AboutUs.astro  Demo.astro  Footer.astro  Hero.astro  HowItWorks.astro  Nav.astro  OpenSourceCTA.astro  ProblemStatement.astro  UseCases.astro
frontend/src/layouts/: Base.astro
frontend/src/pages/: datenschutz.astro  impressum.astro  index.astro
frontend/src/styles/: global.css
mcp-server/: privacyproxy_mcp.py
proxy/: pyproject.toml
proxy/austrai_proxy/: __init__.py  __main__.py  cli.py  config.py  interactive.py  server.py  stream_rehydrator.py
proxy/austrai_proxy/core/: __init__.py  anonymizer.py  austrian_recognizers.py  codename_engine.py  context_learner.py  detector.py  extractor.py  models.py  rehydrator.py  session_store.py  setup.py
