[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "austrai"
version = "1.0.0"
description = "AUSTR.AI — Privacy Firewall fuer KI-Dienste. Lokale Anonymisierung, API Proxy, Desktop App."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "uvicorn[standard]>=0.34",
    "starlette>=0.41",
    "click>=8.1",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
    "presidio-analyzer>=2.2",
    "spacy>=3.7",
    "pydantic>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
desktop = ["pywebview>=5.0"]

[project.scripts]
aai = "austrai_proxy.cli:main"

[tool.setuptools.packages.find]
include = ["austrai_proxy*"]
